--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -64,13 +64,16 @@
         body.appendChild(onTitle);
 
         let onMain = document.createElement('main');
-        onMain.classList.add("main-content");
+        onMain.classList.add('main-content');
         body.appendChild(onMain);
 
         let onSection = document.createElement('section');
         onSection.classList.add('center-content');
         onMain.appendChild(onSection);
 
+        let paragraph = document.createElement('p');
+        paragraph.innerText = 'Hello good Morning!';
+        onSection.appendChild(paragraph);
     </script>
 </body>
 </html>
