--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -74,6 +74,10 @@
         let paragraph = document.createElement('p');
         paragraph.innerText = 'Hello good Morning!';
         onSection.appendChild(paragraph);
+
+        let onSectionTwo = document.createElement('section');
+        onSectionTwo.classList.add('left-content');
+        onMain.appendChild(onSectionTwo);
     </script>
 </body>
 </html>
