--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -27,6 +27,7 @@
 
         .main-content .center-content p {
         font-style: italic;
+        text-align: center;
         }
 
         .main-content .left-content {
@@ -78,6 +79,12 @@
         let onSectionTwo = document.createElement('section');
         onSectionTwo.classList.add('left-content');
         onMain.appendChild(onSectionTwo);
+
+        let onSectionThree = document.createElement('section');
+        onSectionThree.classList.add('rigth-content');
+        onMain.appendChild(onSectionThree);
+
+        
     </script>
 </body>
 </html>
