--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -84,6 +84,12 @@
         onSectionThree.classList.add('rigth-content');
         onMain.appendChild(onSectionThree);
 
+        // Source: https://cursos.alura.com.br/forum/topico-inserir-imagem-dentro-do-javascript-89494?gclid=CjwKCAiAs92MBhAXEiwAXTi255DuWQcB4DiGYX4uEKHpCQ1FIUebInac1qa_IfzxOGnrZxb98F0b_BoCdEUQAvD_BwE
+        let img = document.createElement('img');
+        img.src = 'https://picsum.photos/200';
+        img.classList.add('small-image');
+        onSectionTwo.appendChild(img);
+
         
     </script>
 </body>
