--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -118,6 +118,10 @@
 
         let onHThreeThree = document.createElement('h3');
         onMain.appendChild(onHThreeThree);
+
+        //changes and removals
+        //exercise 1.
+        onTitle.classList.add('title');
     </script>
 </body>
 </html>
