--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -122,6 +122,11 @@
         //changes and removals
         //exercise 1.
         onTitle.classList.add('title');
+
+        //exercise 2.
+        onHThree.classList.add('description');
+        onHThreeTwo.classList.add('description');
+        onHThreeThree.classList.add('description');
     </script>
 </body>
 </html>
