--- a/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
+++ b/fundamentals/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises/index.html
@@ -43,7 +43,7 @@
         margin-right: auto;
         border-radius: 100%;
         }
-        
+        /*exercise 4*/
         .main-content .right-content {
         background-color: blue;
         width: 60%;
